--- a/src/Layouts/Sidebar.scss
+++ b/src/Layouts/Sidebar.scss
@@ -1,7 +1,9 @@
 .sidebar {
   background: white;
-  height: 100%;
+  height: 100vh;
   font-family: sans-serif;
+  width: 300px;
+  min-width: 300px;
 
   .logo {
     height: 150px;
@@ -81,5 +83,11 @@
       transition: transform 0.4s;
       transition: transform 0.4s, -webkit-transform 0.4s;
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .sidebar {
+    display: none;
   }
 }
