fix react warning "class" to "className"

--- a/src/components/LetterImage.scss
+++ b/src/components/LetterImage.scss
@@ -5,8 +5,9 @@ letter-image
 -------------------------------- */
 
 .letter-image-container {
-  position: relative;
   height: 100%;
+  left: 50%;
+  background: none !important;
 
   .button-container {
     position: absolute;
