--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,14 +1,16 @@
 .home-view-container {
-  padding: 60px 60px 60px 100px;
+  padding: 120px 60px 60px 100px;
+  min-height: 100vh;
 
-  h3 {
-    font-size: 1.5rem;
+  h4 {
+    font-size: 1.2rem;
+    color: #a2a2a2;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .home-view-container {
-    padding: 40px;
+    padding: 80px 40px;
   }
 }
 
@@ -38,7 +40,7 @@
   }
 
   .cd-title h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   h3 {
@@ -54,7 +56,7 @@
 
 @media only screen and (min-width: 768px) {
   .cd-headline {
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-weight: 300;
   }
 
@@ -74,6 +76,7 @@
 }
 
 .cd-words-wrapper {
+  color: #ea3c12;
   display: inline-block;
   position: relative;
   text-align: left;
