--- a/src/components/AboutMe.scss
+++ b/src/components/AboutMe.scss
@@ -1,3 +1,7 @@
+#AboutMe {
+  min-height: 100vh;
+}
+
 .tab-container {
   text-align-last: center;
   height: 45px;
@@ -17,8 +21,6 @@
     }
   }
 }
-
-
 
 .tab-card {
   border: 2px dashed red;
