--- a/src/Layouts/Sidebar.scss
+++ b/src/Layouts/Sidebar.scss
@@ -16,6 +16,7 @@
     margin: 40px 30px;
     border: 1px solid #454d58;
     border-radius: 5px;
+    cursor: pointer;
 
     .nav-item-icon-container {
       background: #ea3c12;
