--- a/src/Sections/Home/Home.scss
+++ b/src/Sections/Home/Home.scss
@@ -1,6 +1,6 @@
 .home-view-container {
-  padding: 10% 60px 0 100px;
-  min-height: 85vh;
+  padding: 10% 3vw 0 3vw;
+  min-height: 80vh;
 
   h4 {
     font-size: 1.2rem;
