--- a/src/Sections/Home/LetterImage.scss
+++ b/src/Sections/Home/LetterImage.scss
@@ -34,9 +34,9 @@ letter-image
   position: absolute;
   height: 225px;
   width: 300px;
-  -webkit-transition: .4s;
-  -moz-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  transition: 0.4s;
 
   .body {
     position: absolute;
@@ -57,11 +57,11 @@ letter-image
     border-style: solid;
     border-width: 77px 150px 0 150px;
     -webkit-transform-origin: 50% 0%;
-    -webkit-transition: transform .4s .4s, z-index .2s .4s;
+    -webkit-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
     -moz-transform-origin: 50% 0%;
-    -moz-transition: transform .4s .4s, z-index .2s .4s;
+    -moz-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
     transform-origin: 50% 0%;
-    transition: transform .4s .4s, z-index .2s .4s;
+    transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
     border-color: #cf4a43 transparent transparent transparent;
     z-index: 2;
   }
@@ -95,18 +95,20 @@ letter-image
     background: white;
     z-index: 1;
     overflow: hidden;
-    -webkit-transition: .4s .2s;
-    -moz-transition: .4s .2s;
-    transition: .4s .2s;
+    -webkit-transition: 0.4s 0.2s;
+    -moz-transition: 0.4s 0.2s;
+    transition: 0.4s 0.2s;
 
     .letter-border {
       height: 15px;
       width: 100%;
-      background: repeating-linear-gradient(-45deg,
-          #cb5a5e,
-          #cb5a5e 12px,
-          transparent 12px,
-          transparent 24px);
+      background: repeating-linear-gradient(
+        -45deg,
+        #cb5a5e,
+        #cb5a5e 12px,
+        transparent 12px,
+        transparent 24px
+      );
     }
 
     .letter-title {
@@ -143,15 +145,19 @@ letter-image
   left: 50%;
   width: 500px;
   height: 45px;
-  transition: .4s;
+  transition: 0.4s;
   transform: translateX(-50%);
-  -webkit-transition: .4s;
+  -webkit-transition: 0.4s;
   -webkit-transform: translateX(-50%);
-  -moz-transition: .4s;
+  -moz-transition: 0.4s;
   -moz-transform: translateX(-50%);
 
   border-radius: 100%;
-  background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
+  background: radial-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .letter-image-container:hover {
@@ -162,11 +168,11 @@ letter-image
   }
 
   .animated-mail .top-fold {
-    transition: transform .4s, z-index .2s;
+    transition: transform 0.4s, z-index 0.2s;
     transform: rotateX(180deg);
-    -webkit-transition: transform .4s, z-index .2s;
+    -webkit-transition: transform 0.4s, z-index 0.2s;
     -webkit-transform: rotateX(180deg);
-    -moz-transition: transform .4s, z-index .2s;
+    -moz-transition: transform 0.4s, z-index 0.2s;
     -moz-transform: rotateX(180deg);
     z-index: 0;
   }
