address skill bar css

--- a/src/Sections/Skills/Skills.scss
+++ b/src/Sections/Skills/Skills.scss
@@ -19,6 +19,7 @@
 .skill-bar {
   margin: 10px 20px;
   padding: 0 20px 0 20px;
+  font-size: 1.2rem;
 
   .skill-bar-header {
     display: flex;
@@ -29,5 +30,10 @@
     height: 9px;
     border-radius: 10px;
     margin-top: 8px;
+    background: #e78871;
+
+    .MuiLinearProgress-bar {
+      background: #ea3c12;
+    }
   }
 }
