--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,10 @@
   border-bottom: 6px solid #ea3c12;
   margin: 10px auto;
 }
+
+h1.header {
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+}
