--- a/src/Sections/Projects/Projects.scss
+++ b/src/Sections/Projects/Projects.scss
@@ -27,10 +27,21 @@
         height: 100%;
         margin: 25px;
         position: relative;
+        overflow: hidden;
 
         #project-img {
           width: 100%;
           height: 100%;
+          -webkit-transform: rotate(0) scale(1);
+          transform: rotate(0) scale(1);
+
+          -webkit-transition: 0.3s ease-in-out;
+          transition: 0.3s ease-in-out;
+        }
+
+        &:hover #project-img {
+          -webkit-transform: rotate(15deg) scale(1.4);
+          transform: rotate(15deg) scale(1.4);
         }
       }
 
